fixup! ISSUE-119 [DOMAIN-ADDRESSBOOK] DAV client: method to create domain members address book